// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the P component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": null,
      "fontSize": 18,
      "lineHeight": 20,
    }
  }
>
  "True faith means holding nothing back. It means putting every hope in God's fidelity to His Promises." ― Francis Chan
</Text>
`;

exports[`the P component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": null,
      "fontSize": 18,
      "lineHeight": 20,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the P component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": null,
      "fontSize": 18,
      "lineHeight": 20,
    }
  }
>
  Default P text
</Text>
`;
